# cs629_fall24

./: README.md
dependencies/: README.md
homework1/: README.md
homework1/src/: CMakeLists.txt  main.cpp
homework2/: README.md
homework2/src/: CMakeLists.txt  main.c  model.h
